<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="main.controllers.ABMCursoActivity" >
    
    <ListView
        android:id="@+id/listaDeCursos"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="0dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToBuscarCursos"
        android:text="@string/btnGoToBuscarCursos" />
    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGoToAltaCurso"
        android:onClick="goToAltaCurso" />
    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnReiniciarBD"
        android:onClick="reiniciarBD" />

</LinearLayout>