<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:onClick="goToBuscarCursos"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2" >

        <ImageView
            android:contentDescription="@string/image_description"
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo_ort" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03" >

        <LinearLayout
            android:layout_width="189dp"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/lblMisCursos" />

            <Spinner
                android:id="@+id/spinnerMaterias"
                android:layout_width="306dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="goToABMCursos"
        android:text="@string/btnGoToABMCursos" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="dumpDBtoCSV"
        android:text="@string/btnExportarASD" />

</LinearLayout>